crates/toon-schema/tests/compile_fail/missing_example.stderr
error: Struct 'MissingExample' is missing required #[toon_schema(example = "...")] attribute
       help: add one or more full JSON object examples at the struct level
       example: #[toon_schema(example = r#"{"field":"example_value"}"#)]
 --> tests/compile_fail/missing_example.rs:5:8
  |
5 | struct MissingExample {
  |        ^^^^^^^^^^^^^^
